minio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2020-12-29T23-29-29Z
          ports:
            - containerPort: 9000
          args:
            - server
            - /data
          volumeMounts:
            - name: minio-pv-storage
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: minio-pv-storage
          persistentVolumeClaim:
            claimName: minio-pvc
