minio/service.yml
apiVersion: v1
kind: Service
metadata:
   name: minio-svc
   namespace: minio
   labels:
      app: minio
spec:
   ports:
      - port: 9001
        name: minio-data
        targetPort: 9000
   selector:
      app: minio
