minio/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingressroute
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`minio.home`)
    kind: Rule
    services:
    - name: minio-svc
      port: 9001
